# computer-graphics

./: README.md
lab-1/task-1/: CMakeLists.txt
lab-1/task-1/src/: ILetter.h  LetterB.h  LetterK.h  LetterP.h  main.cpp
lab-1/task-1/src/graphics/: Letter.h  LetterB.h  LetterK.h  LetterP.h
lab-1/task-2/: CMakeLists.txt
lab-1/task-2/src/: main.cpp
lab-1/task-2/src/graphics/: BigWindow.h  CompositeShape.h  Door.h  Flue.h  House.h  Image.h  RectangleShape.h  Roof.h  Slope.h  SmallWindow.h  TriangleShape.h  Wall.h
lab-1/task-2/src/graphics/background/: Background.h  Cloud.h  Tree.h
lab-1/task-2/src/graphics/fence/: Board.h  Fence.h
lab-1/task-2/src/graphics/house/: BigWindow.h  Door.h  Flue.h  House.h  Roof.h  Slope.h  SmallWindow.h  Wall.h
lab-1/task-2/src/graphics/shapes/: CircleShape.h  CompositeShape.h  IShape.h  RectangleShape.h  TriangleShape.h
lab-1/task-3/: CMakeLists.txt  main.cpp
lab-1/task-3/shaders/: fragment.glsl  fragment_shader.glsl  vertex.glsl  vertex_shader.glsl
lab-1/task-3/src/: Buffer.h  Shader.h  main.cpp
lab-2/task-1/: CMakeLists.txt
lab-2/task-1/src/: ImageViewer.h  MainWindow.h  main.cpp
lab-2/task-2/: CMakeLists.txt
lab-2/task-2/src/: ImageEditor.h  MainWindow.h  main.cpp
